@@ -4,6 +4,7 @@ Revision history for Perl extension Wx.
     - added wxCommandLinkButton
     - updates to ID creation methods
     - rt#84633
+    - added wxUIActionSimulator
 
 0.9921 Sun Apr 14 2013
     - Fix 2.9.4 handling of wxConnection::Execute
